chol_psd near_psd

--- a/Week 3/Code.ipynb
+++ b/Week 3/Code.ipynb
@@ -5,8 +5,7 @@
    "id": "117ad338-ec81-4a92-9b28-fb10aa62ed78",
    "metadata": {},
    "source": [
-    "## Problem 1\n",
-    "Create a routine for calculating an exponentially weighted covariance matrix."
+    "## Problem 1"
    ]
   },
   {
@@ -88,6 +87,109 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85ef625c-c914-40eb-92bf-2134bfefdbff",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Problem 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "41610dd1-8a9d-4205-ae10-6689bcbef2a5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.,  0.,  0.],\n",
+       "       [ 6.,  1.,  0.],\n",
+       "       [-8.,  5.,  3.]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "def chol_psd(psd_mat):\n",
+    "    n = psd_mat.shape[0]\n",
+    "    # Initialize the root matrix with zeros\n",
+    "    root = np.zeros((n, n))\n",
+    "    \n",
+    "    # Loop over each element in the matrix\n",
+    "    for i in range(n):\n",
+    "        for k in range(i+1):\n",
+    "            s = sum(root[i, j] * root[k, j] for j in range(k))\n",
+    "            \n",
+    "            if i == k:  # Diagonal elements\n",
+    "                root[i, k] = np.sqrt(max(psd_mat[i, i] - s, 0))\n",
+    "            else:  # Off-diagonal elements\n",
+    "                if root[k, k] > 1e-8:\n",
+    "                    root[i, k] = (1.0 / root[k, k]) * (psd_mat[i, k] - s)\n",
+    "                    \n",
+    "    return root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "39866f1b-a2f2-43b0-8638-5fa831588a7f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.92387953 -0.5411961  -0.07612047]\n",
+      " [-0.5411961   1.84775907 -0.5411961 ]\n",
+      " [-0.07612047 -0.5411961   1.92387953]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def modified_near_psd(mat, epsilon=0.0):\n",
+    "    n = mat.shape[0]\n",
+    "    result = mat.copy()\n",
+    "\n",
+    "    # Check if the input is a covariance matrix, and if so, convert to a correlation matrix\n",
+    "    if not np.allclose(np.diag(result), 1.0):\n",
+    "        scale = np.diag(1.0 / np.sqrt(np.diag(result)))\n",
+    "        result = scale @ result @ scale\n",
+    "\n",
+    "    # Perform eigenvalue decomposition and adjust the eigenvalues\n",
+    "    eigenvalues, eigenvectors = np.linalg.eigh(result)\n",
+    "    adjusted_eigenvalues = np.maximum(eigenvalues, epsilon)\n",
+    "\n",
+    "    # Reconstruct the positive semi-definite matrix\n",
+    "    result = eigenvectors @ np.diag(np.sqrt(adjusted_eigenvalues)) @ eigenvectors.T\n",
+    "\n",
+    "    # If the input was a covariance matrix, scale back to the original scale\n",
+    "    if 'scale' in locals():\n",
+    "        result = np.linalg.inv(scale) @ result @ np.linalg.inv(scale)\n",
+    "    \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4c11eed-c6c8-4f13-84c5-a63b85131e58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
