--- a/Week 6/Code.ipynb
+++ b/Week 6/Code.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "ef8b6ec2-34a8-4515-952f-c9a5f6dfe8ef",
    "metadata": {
     "tags": []
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "7ab2f202-53c0-4875-af4c-f94c49b11ec3",
    "metadata": {
     "tags": []
@@ -340,6 +340,9 @@
     "# Simulate portfolio values across a range of underlying prices\n",
     "simulated_prices = np.linspace(current_price * 0.6, current_price * 1.4, 50)\n",
     "portfolio_values = simulate_portfolio_values(portfolio, simulated_prices, ivol, rf_rate, div_rate, current_date)\n",
+    "simulated_prices\n",
+    "portfolio_values\n",
+    "\n",
     "\n",
     "# Plot the results\n",
     "fig, axes = plt.subplots(3, 3, figsize=(15, 15))\n",
@@ -354,6 +357,128 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd0a07a5-0af8-465d-b245-d72bd7400689",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from math import log,sqrt,exp\n",
+    "from scipy.stats import norm\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "from datetime import datetime\n",
+    "from scipy.optimize import fsolve\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Solve Implied volatility using gbsm\n",
+    "def implied_vol(underlying,strike,ttm,rf,b,call,value,initvol):\n",
+    "    def sol_vol(x,underlying,strike,ttm,rf,b,call,value):\n",
+    "        return gbsm(underlying,strike,ttm,rf,b,x,call=call)-value\n",
+    "    vol = fsolve(sol_vol,initvol,args=(underlying,strike,ttm,rf,b,call,value))\n",
+    "    return vol[0]\n",
+    "\n",
+    "def gbsm(underlying,strike,ttm,rf,b,ivol,call=True):\n",
+    "    d1 = (log(underlying/strike)+(b+ivol**2/2)*ttm)/(ivol*sqrt(ttm))\n",
+    "    d2 = d1 - ivol*sqrt(ttm)\n",
+    "    if call:\n",
+    "        return underlying * exp((b-rf)*ttm) * norm(0,1).cdf(d1) - strike*exp(-rf*ttm)* norm(0,1).cdf(d2)\n",
+    "    else:\n",
+    "        return strike*exp(-rf*ttm)* norm(0,1).cdf(-d2) - underlying * exp((b-rf)*ttm) * norm(0,1).cdf(-d1)\n",
+    "\n",
+    "\n",
+    "port_options = pd.read_csv(\"problem3.csv\")\n",
+    "# Calculate ttm\n",
+    "curdate= datetime(2023,10,30)\n",
+    "port_options['ExpirationDate']=port_options['ExpirationDate'].astype(\"datetime64[ns]\")\n",
+    "port_options['ttm'] = port_options['ExpirationDate'].apply(lambda x: round((x-curdate).days/365,6))\n",
+    "port_options['OptionType'] = port_options['OptionType'].apply(lambda x: bool(x==\"Call\") if pd.notna(x) else x)\n",
+    "# Initial assumptions\n",
+    "underlying =170.15\n",
+    "rf = 0.0525\n",
+    "# dividend yield\n",
+    "q=0.0057\n",
+    "# Caculate implied vol\n",
+    "def row_fun_port(row,underlying,rf,b):\n",
+    "    vol = implied_vol(underlying,row['Strike'],row['ttm'],rf,b,row['OptionType'],row['CurrentPrice'],0.2)\n",
+    "    return vol\n",
+    "port_options['Implied Vol'] = port_options[port_options['Type']=='Option'].apply(row_fun_port,args=(underlying,rf,round(rf-q,4)),axis=1)\n",
+    "# Calculate value for each option given the underlying\n",
+    "def value_cal(row,underlying,rf,b,daysahead):\n",
+    "    if row['Type'] == 'Stock':\n",
+    "        return underlying\n",
+    "    else:\n",
+    "        return gbsm(underlying,row['Strike'],row['ttm']-daysahead/365,rf,b,row['Implied Vol'],row['OptionType'])*row['Holding']\n",
+    "# Set the range for underlying\n",
+    "underlying_list = np.linspace(100,200,num=21).tolist()\n",
+    "# Create the dataframe to store the portfolio values\n",
+    "port_values = pd.DataFrame(port_options['Portfolio'])\n",
+    "for underlying in underlying_list:\n",
+    "    port_values[underlying]=port_options.apply(value_cal,args=(underlying,rf,round(rf-q,4),0),axis=1)\n",
+    "# Portfolio values under the range\n",
+    "portfolio_range = port_values.groupby('Portfolio').sum().T\n",
+    "\n",
+    "daily_prices = pd.read_csv(\"DailyPrices.csv\")\n",
+    "# Calculate the log return of AAPL\n",
+    "aapl_log = np.log(daily_prices['AAPL']/daily_prices['AAPL'].shift(1))\n",
+    "# Demean the series\n",
+    "aapl_log = aapl_log-aapl_log.mean()\n",
+    "# Simulate using AR1\n",
+    "def ar1_sim(r,ndays,p0,nsim=10000,seed=10):\n",
+    "    ar1_fit = sm.tsa.arima.ARIMA(r, order=(1, 0, 0))\n",
+    "    con,beta,s= ar1_fit.fit().params[0],ar1_fit.fit().params[1],np.sqrt(ar1_fit.fit().params[2])\n",
+    "    np.random.seed(seed)\n",
+    "    rsim = np.zeros((nsim,ndays))\n",
+    "    for i in range(nsim):\n",
+    "        rsim[i,0] = con+ beta*r.iloc[-1] + s*np.random.normal()\n",
+    "        for j in range(1,ndays):\n",
+    "            rsim[i,j]=con+ beta*rsim[i,j-1] + s*np.random.normal()\n",
+    "    rsim_cum = np.sum(rsim,axis=1)\n",
+    "    psim = np.zeros(nsim)\n",
+    "    for i in range(nsim):\n",
+    "        psim[i]=p0*np.exp(rsim_cum[i])\n",
+    "    return psim\n",
+    "# simulated underlying price\n",
+    "underlying_sim = ar1_sim(aapl_log,10,underlying,seed=20)\n",
+    "# The current value of portfolios\n",
+    "port_current = port_options.apply(value_cal,args=(underlying,rf,round(rf-q,4),0),axis=1)\n",
+    "pl_list = []\n",
+    "for i in range(len(underlying_sim)):\n",
+    "    pl = port_options.apply(value_cal,args=(underlying_sim[i],rf,round(rf-q,4),10),axis=1) - port_current\n",
+    "    pl_list.append(pl)\n",
+    "pl_sim = pd.concat(pl_list,axis=1)\n",
+    "pl_sim.set_index(port_options['Portfolio'],inplace=True)\n",
+    "port_sim = pl_sim.groupby(level=0).sum().T\n",
+    "# calculate mean\n",
+    "port_mean = port_sim.mean(axis=0)\n",
+    "port_stat = pd.DataFrame(port_mean,columns=['Mean'])\n",
+    "\n",
+    "def VaR(a,alpha=0.05):\n",
+    "    a = np.sort(a)\n",
+    "    v= np.quantile(a,alpha)\n",
+    "    return -v\n",
+    "\n",
+    "def ES(a,alpha=0.05):\n",
+    "    a = np.sort(a)\n",
+    "    v= np.quantile(a,alpha)\n",
+    "    es = a[a<=v].mean()\n",
+    "    return -es\n",
+    "\n",
+    "# Calculate VaR and ES\n",
+    "vars = []\n",
+    "ess =[]\n",
+    "for col in port_sim.columns:\n",
+    "    vars.append(VaR(port_sim[col].values))\n",
+    "    ess.append(ES(port_sim[col].values))\n",
+    "port_stat['VaR'] = vars\n",
+    "port_stat['ES'] = ess\n",
+    "port_stat"
    ]
   }
  ],
