--- a/Week 7/Code_week7.ipynb
+++ b/Week 7/Code_week7.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "408602fd-7141-4e2c-b6b1-05cc9b79eaec",
    "metadata": {
     "tags": []
@@ -21,7 +21,8 @@
     "import pandas as pd\n",
     "from datetime import datetime, timedelta\n",
     "from scipy.stats import norm\n",
-    "import inspect"
+    "import inspect\n",
+    "from typing import List"
    ]
   },
   {
@@ -235,6 +236,180 @@
     "gbsm_carry_rho = cal_derivative_wrt_one(gbsm, 1 ,'b')\n",
     "print(\"Call's Carry Rho is \", gbsm_carry_rho( \"Call\", S0, X, T, ivol, r, b))\n",
     "print(\"Put's Carry Rho is \", gbsm_carry_rho( \"Put\", S0, X, T, ivol, r, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e7505ce9-cb63-44eb-9fa8-5df4d0acc4ab",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# No dividend binomial tree\n",
+    "def bt_no_div(call, underlying, strike, ttm, rf, b, ivol, N):\n",
+    "    dt = ttm/N\n",
+    "    u = np.exp(ivol*np.sqrt(dt))\n",
+    "    d = 1/u\n",
+    "    pu = (np.exp(b*dt)-d)/(u-d)\n",
+    "    pd = 1.0-pu\n",
+    "    df = np.exp(-rf*dt)\n",
+    "    z = 1 if call else -1\n",
+    "\n",
+    "    def nNodeFunc(n):\n",
+    "        return (n+1)*(n+2) // 2\n",
+    "    def idxFunc(i,j):\n",
+    "        return nNodeFunc(j-1)+i\n",
+    "    nNodes = nNodeFunc(N)\n",
+    "\n",
+    "    optionValues = [0.0] * nNodes\n",
+    "\n",
+    "    for j in range(N,-1,-1):\n",
+    "        for i in range(j,-1,-1):\n",
+    "            idx = idxFunc(i,j)\n",
+    "            price = underlying*u**i*d**(j-i)\n",
+    "            optionValues[idx] = max(0,z*(price-strike))\n",
+    "            \n",
+    "            if j < N:\n",
+    "                optionValues[idx] = max(optionValues[idx], df*(pu*optionValues[idxFunc(i+1,j+1)] + pd*optionValues[idxFunc(i,j+1)]))\n",
+    "\n",
+    "    return optionValues[0]\n",
+    "\n",
+    "def bt_with_div(call: bool, underlying: float, strike: float, ttm: float, rf: float, b:float, divAmts: List[float], divTimes: List[int], ivol: float, N: int):\n",
+    "    if not divAmts or not divTimes or divTimes[0] > N:\n",
+    "        return bt_no_div(call, underlying, strike, ttm, rf, b, ivol, N)\n",
+    "    \n",
+    "    dt = ttm / N\n",
+    "    u = np.exp(ivol * np.sqrt(dt))\n",
+    "    d = 1 / u\n",
+    "    pu = (np.exp(b * dt) - d) / (u - d)\n",
+    "    pd = 1 - pu\n",
+    "    df = np.exp(-rf * dt)\n",
+    "    z = 1 if call else -1\n",
+    "\n",
+    "    def nNodeFunc(n: int) -> int:\n",
+    "        return int((n + 1) * (n + 2) / 2)\n",
+    "    \n",
+    "    def idxFunc(i: int, j: int) -> int:\n",
+    "        return nNodeFunc(j - 1) + i\n",
+    "    \n",
+    "    nDiv = len(divTimes)\n",
+    "    nNodes = nNodeFunc(divTimes[0])\n",
+    "\n",
+    "    optionValues = [0] * nNodes\n",
+    "\n",
+    "    for j in range(divTimes[0], -1, -1):\n",
+    "        for i in range(j, -1, -1):\n",
+    "            idx = idxFunc(i, j)\n",
+    "            price = underlying * (u ** i) * (d ** (j - i))\n",
+    "            \n",
+    "            if j < divTimes[0]:\n",
+    "                #times before the dividend working backward induction\n",
+    "                optionValues[idx] = max(0, z * (price - strike))\n",
+    "                optionValues[idx] = max(optionValues[idx], df * (pu * optionValues[idxFunc(i + 1, j + 1)] + pd * optionValues[idxFunc(i, j + 1)]))\n",
+    "            else:\n",
+    "                #time of the dividend\n",
+    "                valNoExercise = bt_with_div(call, price - divAmts[0], strike, ttm - divTimes[0] * dt, rf, b, divAmts[1:], [t - divTimes[0] for t in divTimes[1:]], ivol, N - divTimes[0])\n",
+    "                valExercise = max(0, z * (price - strike))\n",
+    "                optionValues[idx] = max(valNoExercise, valExercise)\n",
+    "\n",
+    "    return optionValues[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d22eac59-e05e-4a9e-a4dd-6e4c878a6baa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using binomial tree\n",
+      "For the condition without dividend:\n",
+      "The value of call option is  0.33600393488439756\n",
+      "The value of put option is  14.036960189311992\n",
+      "For the condition with dividend:\n",
+      "The value of call option is  0.2986182507141515\n",
+      "The value of put option is  14.556578296241277\n",
+      "\n",
+      "\n",
+      "Using binomial tree, calculate the greeks:\n",
+      "Call's Delta is  0.07257286328982149\n",
+      "Put's Delta is  -0.9383141177634613\n",
+      "Call's Gamma is  -4.440892098500626e-10\n",
+      "Put's Gamma is  1.3280043731356272e-05\n",
+      "Call's Vega is  6.319443776511613\n",
+      "Put's Vega is  5.675482057658776\n",
+      "Call's Theta is  -7.467912305700125\n",
+      "Put's Theta is  -0.44897168735502646\n",
+      "Call's Rho is  -0.024371099666187224\n",
+      "Put's Rho is  -1.1608664676270308\n",
+      "Call's Carry Rho is  0.9626647836450952\n",
+      "Put's Carry Rho is  -11.31109543934361\n",
+      "Sensitivity to dividend amount: Call: -0.021, Put: 0.941\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 200\n",
+    "div = [0.88]\n",
+    "div_date = datetime(2022, 4, 11)\n",
+    "div_time = [round((div_date - current_date).days / (exp_date - current_date).days * N)]\n",
+    "\n",
+    "print(\"Using binomial tree\")\n",
+    "print(\"For the condition without dividend:\")\n",
+    "print(\"The value of call option is \", bt_no_div(True, S0, X, T, r, b, ivol, N))\n",
+    "print(\"The value of put option is \", bt_no_div(False, S0, X, T, r, b, ivol, N))\n",
+    "\n",
+    "# When using discrete dividend, b = rf \n",
+    "b = 0.0425\n",
+    "print(\"For the condition with dividend:\")\n",
+    "print(\"The value of call option is \", bt_with_div(True, S0, X, T, r, b, div, div_time, ivol, N))\n",
+    "print(\"The value of put option is \", bt_with_div(False, S0, X, T, r, b, div, div_time, ivol, N))\n",
+    "\n",
+    "print('\\n')\n",
+    "print(\"Using binomial tree, calculate the greeks:\")\n",
+    "bt_delta = cal_derivative_wrt_one(bt_with_div, 1, 'underlying')\n",
+    "print(\"Call's Delta is \", bt_delta(True, S0, X, T, r, b, div, div_time, ivol, N))\n",
+    "print(\"Put's Delta is \", bt_delta(False, S0, X, T, r, b, div, div_time, ivol, N)) \n",
+    "\n",
+    "bt_gamma = cal_derivative_wrt_one(bt_with_div, 2 ,'underlying')\n",
+    "print(\"Call's Gamma is \", bt_gamma( True, S0, X, T, r, b, div, div_time, ivol, N))\n",
+    "print(\"Put's Gamma is \", bt_gamma( False, S0, X, T, r, b, div, div_time, ivol, N)) \n",
+    "\n",
+    "bt_vega = cal_derivative_wrt_one(bt_with_div, 1 ,'ivol')\n",
+    "print(\"Call's Vega is \", bt_vega( True, S0, X, T, r, b, div, div_time, ivol, N))\n",
+    "print(\"Put's Vega is \", bt_vega( False, S0, X, T, r, b, div, div_time, ivol, N)) \n",
+    "\n",
+    "bt_theta = cal_derivative_wrt_one(bt_with_div, 1 ,'ttm')\n",
+    "print(\"Call's Theta is \", -bt_theta( True, S0, X, T, r, b, div, div_time, ivol, N))\n",
+    "print(\"Put's Theta is \", -bt_theta( False, S0, X, T, r, b, div, div_time, ivol, N))\n",
+    "\n",
+    "bt_rho = cal_derivative_wrt_one(bt_with_div, 1 ,'rf')\n",
+    "print(\"Call's Rho is \", bt_rho( True, S0, X, T, r, b, div, div_time, ivol, N))\n",
+    "print(\"Put's Rho is \", bt_rho( False, S0, X, T, r, b, div, div_time, ivol, N))\n",
+    "\n",
+    "bt_carry_rho = cal_derivative_wrt_one(bt_with_div, 1 ,'b')\n",
+    "print(\"Call's Carry Rho is \", bt_carry_rho( True, S0, X, T, r, b, div, div_time, ivol, N))\n",
+    "print(\"Put's Carry Rho is \", bt_carry_rho( False, S0, X, T, r, b, div, div_time, ivol, N))\n",
+    "\n",
+    "# Sensitivity of the put and call to a change in dividend amount\n",
+    "delta = 1e-3\n",
+    "div_up = [0.88 + delta]\n",
+    "div_down = [0.88 - delta]\n",
+    "call_up = bt_with_div(True, S0, X, T, r, b, div_up, div_time, ivol, N)    \n",
+    "call_down = bt_with_div(True, S0, X, T, r, b, div_down, div_time, ivol, N)    \n",
+    "call_sens_to_div_amount = (call_up - call_down) / (2*delta)\n",
+    "\n",
+    "put_up = bt_with_div(False, S0, X, T, r, b, div_up, div_time, ivol, N)    \n",
+    "put_down = bt_with_div(False, S0, X, T, r, b, div_down, div_time, ivol, N)    \n",
+    "put_sens_to_div_amount = (put_up - put_down) / (2*delta)\n",
+    "print(f\"Sensitivity to dividend amount: Call: {call_sens_to_div_amount:.3f}, Put: {put_sens_to_div_amount:.3f}\")"
    ]
   }
  ],
